Fix linter errors and update readme image

--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,7 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  text-align: left;
   width: auto;
   height: auto;
   margin: 0 auto;
