--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 16px;
+  font-size: 12px;
+  box-sizing: border-box;
 }
 
 body {
@@ -53,7 +54,7 @@ ul {
 }
 
 li {
-  padding: 0.5rem;
+  padding: 0.2rem;
   border-radius: 5px;
 }
 
@@ -68,6 +69,10 @@ li:nth-child(odd) {
   border-radius: 10px;
   padding: 1rem;
   margin: 2rem;
+}
+
+.add-your-score {
+  height: 300px;
 }
 
 .recent {
