--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 12px;
+  font-size: 14px;
   box-sizing: border-box;
 }
 
@@ -23,12 +23,14 @@ form {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 5rem;
+  padding: 2rem;
   text-align: left;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
 .main-container,
@@ -37,7 +39,7 @@ h2 {
   flex-direction: row;
   justify-content: space-around;
   text-align: left;
-  width: auto;
+  width: 80%;
   height: auto;
   margin: 0 auto;
 }
@@ -56,10 +58,17 @@ ul {
 li {
   padding: 0.2rem;
   border-radius: 5px;
+  padding-left: 1rem;
 }
 
 li:nth-child(odd) {
   background: #d9d9d9;
+  border: solid 1px #609BEB;
+}
+
+li:nth-child(even) {
+  background: #609BEB;
+  border: solid 1px #d9d9d9;
 }
 
 .recent-scores,
@@ -72,7 +81,12 @@ li:nth-child(odd) {
 }
 
 .add-your-score {
-  height: 300px;
+  width: 600px;
+  height: 400px;
+}
+
+.recent-scores {
+  width: 1200px;
 }
 
 .recent {
@@ -80,21 +94,25 @@ li:nth-child(odd) {
 }
 
 .refresh-btn {
-  font-size: 1.5rem;
+  font-size: 2rem;
   justify-self: center;
+  font-weight: bold;
+  padding: 0.5rem;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
   margin-left: 1.5rem;
 }
 
 .btn {
-  font-size: 1.5rem;
+  font-size: 2rem;
   align-self: flex-end;
+  font-weight: bold;
+  padding: 0.5rem;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
 }
 
 input {
-  font-size: 1.5rem;
-  padding: 0.3rem;
+  font-size: 2rem;
+  padding: 0.5rem;
   border: solid 0.3px #d9d9d9;
   border-radius: 5px;
   margin: 1rem;
