--- a/src/style.css
+++ b/src/style.css
@@ -63,11 +63,11 @@ li {
 
 li:nth-child(odd) {
   background: #d9d9d9;
-  border: solid 1px #609BEB;
+  border: solid 1px #609beb;
 }
 
 li:nth-child(even) {
-  background: #609BEB;
+  background: #609beb;
   border: solid 1px #d9d9d9;
 }
 
